--- a/portfolio.html
+++ b/portfolio.html
@@ -227,130 +227,149 @@ const projects = [
 </script>
 
 
-  <!-- Filter Menu -->
-  <div class="mb-12 flex flex-wrap justify-center gap-4">
-    <button class="filter-btn" data-filter="all">All</button>
-    <button class="filter-btn" data-filter="mockups">Mockups</button>
-    <button class="filter-btn" data-filter="posters">Posters</button>
-    <button class="filter-btn" data-filter="certificates">Certificates</button>
-    <button class="filter-btn" data-filter="events">Events</button>
-    <button class="filter-btn" data-filter="logos">Logos</button>
-    <button class="filter-btn" data-filter="holidays">National Holidays</button>
-    <button class="filter-btn" data-filter="magazines">Magazines</button>
-    <button class="filter-btn" data-filter="tickets">Tickets</button>
-  </div>
+ <!-- Filter Menu -->
+<div class="mb-12 flex flex-wrap justify-center gap-4">
+  <button class="filter-btn" data-filter="all">All</button>
+  <button class="filter-btn" data-filter="mockups">Mockups</button>
+  <button class="filter-btn" data-filter="posters">Posters</button>
+  <button class="filter-btn" data-filter="certificates">Certificates</button>
+  <button class="filter-btn" data-filter="events">Events</button>
+  <button class="filter-btn" data-filter="logos">Logos</button>
+  <button class="filter-btn" data-filter="holidays">National Holidays</button>
+  <button class="filter-btn" data-filter="magazines">Magazines</button>
+  <button class="filter-btn" data-filter="tickets">Tickets</button>
+</div>
 
-  <!-- Gallery Grid -->
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 portfolio-items">
+<!-- Gallery Grid -->
+<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 portfolio-items">
+
+  <!-- 🔥 FEATURED MOCKUPS (added first) -->
+  <img src="Free Office Room Mockup.png" alt="Free Office Room Mockup" class="portfolio-item mockups">
+  <img src="HAMASTA T-Shirt & Tag Mockup.png" alt="HAMASTA T-Shirt & Tag Mockup" class="portfolio-item mockups">
+  
   <!-- Mockups -->
-<img src="mockup1.png" alt="Mockup 1" class="portfolio-item mockups">
-<img src="mockup2.png" alt="Mockup 2" class="portfolio-item mockups">
-<img src="MOCKUP (3).png" alt="Mockup 3" class="portfolio-item mockups">
-<img src="MOCKUP (14).png" alt="Mockup 4" class="portfolio-item mockups">
-<img src="MOCKUP (5).png" alt="Mockup 5" class="portfolio-item mockups">
-<img src="mockup6.png" alt="Mockup 6" class="portfolio-item mockups">
-<img src="mockup7.png" alt="Mockup 7" class="portfolio-item mockups">
-<img src="mockup8.png" alt="Mockup 8" class="portfolio-item mockups">
-<img src="mockup9.png" alt="Mockup 9" class="portfolio-item mockups">
-<img src="mockup10.png" alt="Mockup 10" class="portfolio-item mockups">
-<img src="MOCKUP (10).png" alt="Mockup 11" class="portfolio-item mockups">
-<img src="mockup12.png" alt="Mockup 12" class="portfolio-item mockups">
-<img src="MOCKUP13.jpg" alt="Mockup 13" class="portfolio-item mockups">
-<img src="mockup (14).png" alt="Mockup 14" class="portfolio-item mockups">
-<img src="mockup (15).png" alt="Mockup 15" class="portfolio-item mockups">
-<img src="mockup (16).png" alt="Mockup 16" class="portfolio-item mockups">
-<img src="mockup (17).png" alt="Mockup 17" class="portfolio-item mockups">
-<img src="mockup (18).png" alt="Mockup 18" class="portfolio-item mockups">
-<img src="mockup (19).png" alt="Mockup 19" class="portfolio-item mockups">
-<img src="mockup (20).png" alt="Mockup 20" class="portfolio-item mockups">
-<img src="mockup (21).png" alt="Mockup 21" class="portfolio-item mockups">
-<img src="mockup (22).png" alt="Mockup 22" class="portfolio-item mockups">
-<img src="mockup (23).png" alt="Mockup 23" class="portfolio-item mockups">
-<img src="mockup (24).png" alt="Mockup 24" class="portfolio-item mockups">
-<img src="mockup (25).png" alt="Mockup 25" class="portfolio-item mockups">
-<img src="mockup (26).png" alt="Mockup 26" class="portfolio-item mockups">
-<img src="mockup (27).png" alt="Mockup 27" class="portfolio-item mockups">
-<img src="mockup (28).png" alt="Mockup 28" class="portfolio-item mockups">
-<img src="mockup (29).png" alt="Mockup 29" class="portfolio-item mockups">
-<img src="mockup (30).png" alt="Mockup 30" class="portfolio-item mockups">
-<img src="mockup (31).png" alt="Mockup 31" class="portfolio-item mockups">
-<!-- Posters -->
-<img src="POSTER (2).png" alt="Poster 2" class="portfolio-item posters">
-<img src="POSTER (3).png" alt="Poster 3" class="portfolio-item posters">
-<img src="POSTER (4).png" alt="Poster 4" class="portfolio-item posters">
-<img src="POSTER (5).png" alt="Poster 5" class="portfolio-item posters">
-<img src="POSTER (6).png" alt="Poster 6" class="portfolio-item posters">
-<img src="POSTER (7).png" alt="Poster 7" class="portfolio-item posters">
-<img src="POSTER (8).png" alt="Poster 8" class="portfolio-item posters">
-<img src="POSTER (9).png" alt="Poster 9" class="portfolio-item posters">
-<img src="POSTER (10).png" alt="Poster 10" class="portfolio-item posters">
-<img src="POSTER (11).png" alt="Poster 11" class="portfolio-item posters">
-<img src="POSTER (12).png" alt="Poster 12" class="portfolio-item posters">
-<img src="POSTER (13).png" alt="Poster 13" class="portfolio-item posters">
-<img src="POSTER (14).png" alt="Poster 14" class="portfolio-item posters">
-<img src="POSTER (15).png" alt="Poster 15" class="portfolio-item posters">
-<img src="POSTER (16).png" alt="Poster 16" class="portfolio-item posters">
-<img src="POSTER (17).png" alt="Poster 17" class="portfolio-item posters">
-<!-- Certificates -->
-    <img src="cert1.png" alt="Certificate 1" class="portfolio-item certificates">
-        <img src="cert.jpg" alt="Certificate 1" class="portfolio-item certificates">
+  <img src="mockup1.png" alt="Mockup 1" class="portfolio-item mockups">
+  <img src="mockup2.png" alt="Mockup 2" class="portfolio-item mockups">
+  <img src="MOCKUP (3).png" alt="Mockup 3" class="portfolio-item mockups">
+  <img src="MOCKUP (14).png" alt="Mockup 4" class="portfolio-item mockups">
+  <img src="MOCKUP (5).png" alt="Mockup 5" class="portfolio-item mockups">
+  <img src="mockup6.png" alt="Mockup 6" class="portfolio-item mockups">
+  <img src="mockup7.png" alt="Mockup 7" class="portfolio-item mockups">
+  <img src="mockup8.png" alt="Mockup 8" class="portfolio-item mockups">
+  <img src="mockup9.png" alt="Mockup 9" class="portfolio-item mockups">
+  <img src="mockup10.png" alt="Mockup 10" class="portfolio-item mockups">
+  <img src="MOCKUP (10).png" alt="Mockup 11" class="portfolio-item mockups">
+  <img src="mockup12.png" alt="Mockup 12" class="portfolio-item mockups">
+  <img src="MOCKUP13.jpg" alt="Mockup 13" class="portfolio-item mockups">
+  <img src="mockup (14).png" alt="Mockup 14" class="portfolio-item mockups">
+  <img src="mockup (15).png" alt="Mockup 15" class="portfolio-item mockups">
+  <img src="mockup (16).png" alt="Mockup 16" class="portfolio-item mockups">
+  <img src="mockup (17).png" alt="Mockup 17" class="portfolio-item mockups">
+  <img src="mockup (18).png" alt="Mockup 18" class="portfolio-item mockups">
+  <img src="mockup (19).png" alt="Mockup 19" class="portfolio-item mockups">
+  <img src="mockup (20).png" alt="Mockup 20" class="portfolio-item mockups">
+  <img src="mockup (21).png" alt="Mockup 21" class="portfolio-item mockups">
+  <img src="mockup (22).png" alt="Mockup 22" class="portfolio-item mockups">
+  <img src="mockup (23).png" alt="Mockup 23" class="portfolio-item mockups">
+  <img src="mockup (24).png" alt="Mockup 24" class="portfolio-item mockups">
+  <img src="mockup (25).png" alt="Mockup 25" class="portfolio-item mockups">
+  <img src="mockup (26).png" alt="Mockup 26" class="portfolio-item mockups">
+  <img src="mockup (27).png" alt="Mockup 27" class="portfolio-item mockups">
+  <img src="mockup (28).png" alt="Mockup 28" class="portfolio-item mockups">
+  <img src="mockup (29).png" alt="Mockup 29" class="portfolio-item mockups">
+  <img src="mockup (30).png" alt="Mockup 30" class="portfolio-item mockups">
+  <img src="mockup (31).png" alt="Mockup 31" class="portfolio-item mockups">
 
-    <!-- Events -->
-<img src="event1.png" alt="Event 1" class="portfolio-item events">
-<img src="event2.png" alt="Event 2" class="portfolio-item events">
-<img src="event3.png" alt="Event 3" class="portfolio-item events">
-<img src="event4.png" alt="Event 4" class="portfolio-item events">
-<img src="event5.png" alt="Event 5" class="portfolio-item events">
-<img src="event6.png" alt="Event 6" class="portfolio-item events">
-<img src="event7.png" alt="Event 7" class="portfolio-item events">
-<img src="event8.png" alt="Event 8" class="portfolio-item events">
-<img src="event(2).png" alt="Event (1)" class="portfolio-item events">
-<img src="event(2).jpg" alt="Event (2)" class="portfolio-item events">
-<img src="event(3).jpg" alt="Event (3)" class="portfolio-item events">
-<img src="event(4).jpg" alt="Event (4)" class="portfolio-item events">
-<img src="event(5).png" alt="Event (5)" class="portfolio-item events">
-<!-- Logos -->
-<img src="logo (2).jpg" alt="Logo 2" class="portfolio-item logos">
-<img src="logo.png" alt="Logo" class="portfolio-item logos">
-<img src="logo (3).png" alt="Logo 3" class="portfolio-item logos">
-<img src="logo (4).png" alt="Logo 4" class="portfolio-item logos">
-<img src="logo (5).png" alt="Logo 5" class="portfolio-item logos">
-<img src="logo (6).png" alt="Logo 6" class="portfolio-item logos">
-<img src="logo (7).png" alt="Logo 7" class="portfolio-item logos">
-<img src="logo (8).png" alt="Logo 8" class="portfolio-item logos">
-<img src="logo (9).png" alt="Logo 9" class="portfolio-item logos">
-<img src="logo (10).png" alt="Logo 10" class="portfolio-item logos">
-<img src="logo (11).png" alt="Logo 11" class="portfolio-item logos">
-<img src="logo (12).png" alt="Logo 12" class="portfolio-item logos">
-<img src="logo (13).png" alt="Logo 13" class="portfolio-item logos">
-<img src="logo (14).png" alt="Logo 14" class="portfolio-item logos">
-<img src="logo (15).png" alt="Logo 15" class="portfolio-item logos">
-<img src="logo (16).png" alt="Logo 16" class="portfolio-item logos">
- <!-- Holidays -->
-    <img src="jamuhuri.png" alt="Jamuhuri Day" class="portfolio-item holidays">
-    <img src="madaraka.png" alt="Madaraka Day" class="portfolio-item holidays">
-    <img src="mashujaa.png" alt="Mashujaa Day" class="portfolio-item holidays">
-    <img src="XMASS.png"    alt="Xmass " class="portfolio-item holidays">
-    <img src="XMASS (2).png" alt="Xmass 2" class="portfolio-item holidays">
-    <img src="XMASS (3).png" alt="Xmass 3" class="portfolio-item holidays">
-    <img src="XMASS (4).png" alt="Xmass 4" class="portfolio-item holidays">
-    <!-- New Month Posters -->
-<img src="nm (7).png" alt="New Month Poster 1" class="portfolio-item posters">
-<img src="nm (2).png" alt="New Month Poster 2" class="portfolio-item posters">
-<img src="nm (3).png" alt="New Month Poster 3" class="portfolio-item posters">
-<img src="nm (4).png" alt="New Month Poster 4" class="portfolio-item posters">
-<img src="nm (5).png" alt="New Month Poster 5" class="portfolio-item posters">
-<img src="nm (6).png" alt="New Month Poster 6" class="portfolio-item posters">
-<!-- Magazine -->
-<img src="wm pg 7.png" alt="Magazine Page 1" class="portfolio-item magazines">
-<img src="wm pg 2.png" alt="Magazine Page 2" class="portfolio-item magazines">
-<img src="wm pg 3.png" alt="Magazine Page 3" class="portfolio-item magazines">
-<img src="wm pg 4.png" alt="Magazine Page 4" class="portfolio-item magazines">
-<img src="wm pg 5.png" alt="Magazine Page 5" class="portfolio-item magazines">
-<img src="wm pg 6.png" alt="Magazine Page 6" class="portfolio-item magazines">
-<!-- Tickets -->
-    <img src="ticket.jpeg" alt="Event Ticket" class="portfolio-item tickets">
-  </div>
+  <!-- 🔥 FEATURED POSTERS -->
+  <img src="HOT SEAT SCI.png" alt="HOT SEAT SCI Poster" class="portfolio-item posters">
+  <img src="CAJ.png" alt="CAJ Poster" class="portfolio-item posters">
+  <img src="MUKURU SHUJAA_FACEBOOK COVER.png" alt="Mukuru Shujaa Facebook Cover" class="portfolio-item posters">
+
+  <!-- Posters -->
+  <img src="POSTER (2).png" alt="Poster 2" class="portfolio-item posters">
+  <img src="POSTER (3).png" alt="Poster 3" class="portfolio-item posters">
+  <img src="POSTER (4).png" alt="Poster 4" class="portfolio-item posters">
+  <img src="POSTER (5).png" alt="Poster 5" class="portfolio-item posters">
+  <img src="POSTER (6).png" alt="Poster 6" class="portfolio-item posters">
+  <img src="POSTER (7).png" alt="Poster 7" class="portfolio-item posters">
+  <img src="POSTER (8).png" alt="Poster 8" class="portfolio-item posters">
+  <img src="POSTER (9).png" alt="Poster 9" class="portfolio-item posters">
+  <img src="POSTER (10).png" alt="Poster 10" class="portfolio-item posters">
+  <img src="POSTER (11).png" alt="Poster 11" class="portfolio-item posters">
+  <img src="POSTER (12).png" alt="Poster 12" class="portfolio-item posters">
+  <img src="POSTER (13).png" alt="Poster 13" class="portfolio-item posters">
+  <img src="POSTER (14).png" alt="Poster 14" class="portfolio-item posters">
+  <img src="POSTER (15).png" alt="Poster 15" class="portfolio-item posters">
+  <img src="POSTER (16).png" alt="Poster 16" class="portfolio-item posters">
+  <img src="POSTER (17).png" alt="Poster 17" class="portfolio-item posters">
+
+  <!-- Certificates -->
+  <img src="cert1.png" alt="Certificate 1" class="portfolio-item certificates">
+  <img src="cert.jpg" alt="Certificate 2" class="portfolio-item certificates">
+
+  <!-- Events -->
+  <img src="event1.png" alt="Event 1" class="portfolio-item events">
+  <img src="event2.png" alt="Event 2" class="portfolio-item events">
+  <img src="event3.png" alt="Event 3" class="portfolio-item events">
+  <img src="event4.png" alt="Event 4" class="portfolio-item events">
+  <img src="event5.png" alt="Event 5" class="portfolio-item events">
+  <img src="event6.png" alt="Event 6" class="portfolio-item events">
+  <img src="event7.png" alt="Event 7" class="portfolio-item events">
+  <img src="event8.png" alt="Event 8" class="portfolio-item events">
+  <img src="event(2).png" alt="Event (1)" class="portfolio-item events">
+  <img src="event(2).jpg" alt="Event (2)" class="portfolio-item events">
+  <img src="event(3).jpg" alt="Event (3)" class="portfolio-item events">
+  <img src="event(4).jpg" alt="Event (4)" class="portfolio-item events">
+  <img src="event(5).png" alt="Event (5)" class="portfolio-item events">
+
+  <!-- Logos -->
+  <img src="logo (2).jpg" alt="Logo 2" class="portfolio-item logos">
+  <img src="logo.png" alt="Logo" class="portfolio-item logos">
+  <img src="logo (3).png" alt="Logo 3" class="portfolio-item logos">
+  <img src="logo (4).png" alt="Logo 4" class="portfolio-item logos">
+  <img src="logo (5).png" alt="Logo 5" class="portfolio-item logos">
+  <img src="logo (6).png" alt="Logo 6" class="portfolio-item logos">
+  <img src="logo (7).png" alt="Logo 7" class="portfolio-item logos">
+  <img src="logo (8).png" alt="Logo 8" class="portfolio-item logos">
+  <img src="logo (9).png" alt="Logo 9" class="portfolio-item logos">
+  <img src="logo (10).png" alt="Logo 10" class="portfolio-item logos">
+  <img src="logo (11).png" alt="Logo 11" class="portfolio-item logos">
+  <img src="logo (12).png" alt="Logo 12" class="portfolio-item logos">
+  <img src="logo (13).png" alt="Logo 13" class="portfolio-item logos">
+  <img src="logo (14).png" alt="Logo 14" class="portfolio-item logos">
+  <img src="logo (15).png" alt="Logo 15" class="portfolio-item logos">
+  <img src="logo (16).png" alt="Logo 16" class="portfolio-item logos">
+
+  <!-- Holidays -->
+  <img src="jamuhuri.png" alt="Jamuhuri Day" class="portfolio-item holidays">
+  <img src="madaraka.png" alt="Madaraka Day" class="portfolio-item holidays">
+  <img src="mashujaa.png" alt="Mashujaa Day" class="portfolio-item holidays">
+  <img src="XMASS.png" alt="Xmass " class="portfolio-item holidays">
+  <img src="XMASS (2).png" alt="Xmass 2" class="portfolio-item holidays">
+  <img src="XMASS (3).png" alt="Xmass 3" class="portfolio-item holidays">
+  <img src="XMASS (4).png" alt="Xmass 4" class="portfolio-item holidays">
+
+  <!-- New Month Posters -->
+  <img src="nm (7).png" alt="New Month Poster 1" class="portfolio-item posters">
+  <img src="nm (2).png" alt="New Month Poster 2" class="portfolio-item posters">
+  <img src="nm (3).png" alt="New Month Poster 3" class="portfolio-item posters">
+  <img src="nm (4).png" alt="New Month Poster 4" class="portfolio-item posters">
+  <img src="nm (5).png" alt="New Month Poster 5" class="portfolio-item posters">
+  <img src="nm (6).png" alt="New Month Poster 6" class="portfolio-item posters">
+
+  <!-- Magazine -->
+  <img src="wm pg 7.png" alt="Magazine Page 1" class="portfolio-item magazines">
+  <img src="wm pg 2.png" alt="Magazine Page 2" class="portfolio-item magazines">
+  <img src="wm pg 3.png" alt="Magazine Page 3" class="portfolio-item magazines">
+  <img src="wm pg 4.png" alt="Magazine Page 4" class="portfolio-item magazines">
+  <img src="wm pg 5.png" alt="Magazine Page 5" class="portfolio-item magazines">
+  <img src="wm pg 6.png" alt="Magazine Page 6" class="portfolio-item magazines">
+
+  <!-- Tickets -->
+  <img src="ticket.jpeg" alt="Event Ticket" class="portfolio-item tickets">
+
+</div>
+
 </section>
 
 
@@ -576,6 +595,7 @@ const projects = [
   </script>
 </body>
 </html>
+
 
 
 
