--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Skope Designs | Sege Peter | Designing Brands. Building Code. Beyond Boundaries.</title>
+  <title>About | Sege Peter | Designing Brands. Building Code. Beyond Boundaries.</title>
 
   <!-- SEO Meta -->
   <meta name="description" content="Skope Designs—led by Sege Peter—crafts compelling digital experiences. Specializing in branding, responsive web design, and modern development with Tailwind, Java, Python, MySQL.">
@@ -185,26 +185,34 @@
       </div>
     </div>
 
-    <!-- Bio Content -->
-    <div class="animate-slide-in-right">
-      <h3 class="text-2xl md:text-3xl font-semibold text-secondary mb-4">Meet Sege Peter</h3>
-      <p class="text-gray-700 leading-relaxed">
-        <strong>Sege Peter</strong> is a highly skilled passionate Software Developer & Graphic Designer with a keen eye for aesthetics and innovation.
-        He is the <strong>FOUNDER</strong> and Creative Lead at <strong>Skope Designs</strong>. where Sege specializes in brand identity, web development, UI/UX design, 
-        ,photography and social media management. His technical skills span HTML, CSS, Tailwind, JavaScript, MySQL, Python, Java, and modern frameworks.
-      </p>
-      <p class="mt-4 text-gray-700 leading-relaxed">
-        With a strong foundation in design thinking and a detail-oriented approach, Sege has delivered impactful designs 
-        for clients across various sectors. He is also certified in multiple design and development tools, making him 
-        a versatile digital creative leader.
-      </p>
+<!-- Bio Content -->
+<div class="animate-slide-in-right">
+  <h3 class="text-2xl md:text-3xl font-semibold text-secondary mb-4">Meet Sege Peter</h3>
+  <p class="text-gray-700 leading-relaxed">
+    <strong>Sege Peter</strong> is a passionate and innovative <strong>Software Developer</strong> & <strong>Graphic Designer</strong> with expertise in building modern digital solutions. 
+    He is the <strong>Founder</strong> and Creative Lead at <strong>Skope Designs</strong>, where he drives creativity and innovation across brand identity, web development, UI/UX design, digital graphics, and social media content creation.
+  </p>
 
-      <a href="https://wa.me/254742380183?text=Hi%20Sege%2C%20I'm%20interested%20in%20your%20design%20services!" target="_blank"
-         class="mt-6 inline-block px-6 py-3 bg-secondary text-white rounded-md shadow hover:bg-orange-600 transition">
-        Hire Sege 
-      </a>
-    </div>
-  </div>
+  <p class="mt-4 text-gray-700 leading-relaxed">
+    At Skope Designs, Sege combines his technical skills in <strong>Java, MySQL, Laravel, React.js, HTML, CSS, Tailwind, and JavaScript</strong> with modern design practices to create highly responsive, user-friendly, and visually appealing digital products. 
+    He has successfully delivered projects including responsive websites, web applications, interactive interfaces, and comprehensive branding solutions that enhance client visibility and engagement.
+  </p>
+
+  <p class="mt-4 text-gray-700 leading-relaxed">
+    Beyond development, Sege excels at digital strategy, UI/UX design, and social media management, ensuring every project is both functional and visually compelling. 
+    Certified in multiple design and development tools, he continuously leverages emerging technologies to deliver innovative solutions tailored to client needs.
+  </p>
+
+  <p class="mt-4 text-gray-700 leading-relaxed">
+    Sege’s dedication to quality, creativity, and client satisfaction has positioned Skope Designs as a leading digital creative hub for businesses and individuals seeking impactful online solutions.
+  </p>
+
+  <a href="https://wa.me/254742380183?text=Hi%20Sege%2C%20I'm%20interested%20in%20your%20design%20services!" target="_blank"
+     class="mt-6 inline-block px-6 py-3 bg-secondary text-white rounded-md shadow hover:bg-orange-600 transition">
+    Hire Sege
+  </a>
+</div>
+
 
   <!-- About Skope Designs -->
   <div class="mt-20 bg-gradient-to-r from-cyan-50 to-white p-6 md:p-12 rounded-xl shadow-lg">
@@ -450,6 +458,7 @@
   </script>
 </body>
 </html>
+
 
 
 
