--- a/about.html
+++ b/about.html
@@ -162,12 +162,11 @@
     <li><a href="shop.html">Shop</a></li>
     <li><a href="contact.html">Contact</a></li>
   </ul>
-<br>
-<section id="about" class="bg-white text-orange py-16 px-4 md:px-20">
+<br><section id="about" class="bg-white text-orange py-16 px-4 md:px-20">
   <div class="text-center mb-12">
     <h2 class="text-4xl md:text-5xl font-bold text-orange-800 text-primary animate-fade-in">About Us</h2>
     <p class="mt-4 text-lg text-gray-600 animate-fade-in-up">
-      Discover our story, vision, and the creative mind behind Skope Designs.
+      Discover our story, vision, and the creative mind driving Skope Designs.
     </p>
   </div>
 
@@ -179,48 +178,48 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide"><img src="ceo sege.png" alt="Sege Peter" class="w-full object-cover" /></div>
           <div class="swiper-slide"><img src="DSC_0237.jpg" alt="Sege Peter Speaking" class="w-full object-cover" /></div>
-           <div class="swiper-slide"><img src="sege1.jpg" alt="Sege Peter" class="w-full object-cover" /></div>
+          <div class="swiper-slide"><img src="sege1.jpg" alt="Sege Peter" class="w-full object-cover" /></div>
           <div class="swiper-slide"><img src="sege2.jpg" alt="Sege Peter Speaking" class="w-full object-cover" /></div>
         </div>
       </div>
     </div>
 
-<!-- Bio Content -->
-<div class="animate-slide-in-right">
-  <h3 class="text-2xl md:text-3xl font-semibold text-secondary mb-4">Meet Sege Peter</h3>
-  <p class="text-gray-700 leading-relaxed">
-    <strong>Sege Peter</strong> is a passionate and innovative <strong>Software Developer</strong> & <strong>Graphic Designer</strong> with expertise in building modern digital solutions. 
-    He is the <strong>Founder</strong> and Creative Lead at <strong>Skope Designs</strong>, where he drives creativity and innovation across brand identity, web development, UI/UX design, digital graphics, and social media content creation.
-  </p>
+    <!-- Bio Content -->
+    <div class="animate-slide-in-right">
+      <h3 class="text-2xl md:text-3xl font-semibold text-secondary mb-4">Meet Sege Peter</h3>
+      <p class="text-gray-700 leading-relaxed">
+        <strong>Sege Peter</strong> is a passionate and innovative <strong>Software Developer</strong> & <strong>Graphic Designer</strong> specializing in modern digital solutions. 
+        He is the <strong>Founder</strong> and Creative Lead at <strong>Skope Designs</strong>, where he drives creativity and innovation across brand identity, web development, UI/UX design, digital graphics, and social media content creation.
+      </p>
 
-  <p class="mt-4 text-gray-700 leading-relaxed">
-    At Skope Designs, Sege combines his technical skills in <strong>Java, MySQL, Laravel, React.js, HTML, CSS, Tailwind, and JavaScript</strong> with modern design practices to create highly responsive, user-friendly, and visually appealing digital products. 
-    He has successfully delivered projects including responsive websites, web applications, interactive interfaces, and comprehensive branding solutions that enhance client visibility and engagement.
-  </p>
+      <p class="mt-4 text-gray-700 leading-relaxed">
+        At Skope Designs, Sege combines his technical skills in <strong>Java, MySQL, Laravel, React.js, HTML, CSS, Tailwind, and JavaScript</strong> with cutting-edge design practices to create highly responsive, user-friendly, and visually stunning digital products. 
+        He has delivered projects ranging from interactive web applications and responsive websites to comprehensive branding solutions for startups and enterprises.
+      </p>
 
-  <p class="mt-4 text-gray-700 leading-relaxed">
-    Beyond development, Sege excels at digital strategy, UI/UX design, and social media management, ensuring every project is both functional and visually compelling. 
-    Certified in multiple design and development tools, he continuously leverages emerging technologies to deliver innovative solutions tailored to client needs.
-  </p>
+      <p class="mt-4 text-gray-700 leading-relaxed">
+        Beyond development, Sege excels in digital strategy, UI/UX design, and social media management, ensuring each project is functional, aesthetically compelling, and aligned with client goals. 
+        Certified in multiple design and development tools, he continuously leverages emerging technologies to deliver innovative and impactful solutions.
+      </p>
 
-  <p class="mt-4 text-gray-700 leading-relaxed">
-    Sege’s dedication to quality, creativity, and client satisfaction has positioned Skope Designs as a leading digital creative hub for businesses and individuals seeking impactful online solutions.
-  </p>
+      <p class="mt-4 text-gray-700 leading-relaxed">
+        Sege’s dedication to quality, creativity, and client success has positioned Skope Designs as a leading digital creative hub for businesses and individuals seeking transformative online solutions.
+      </p>
 
-  <a href="https://wa.me/254742380183?text=Hi%20Sege%2C%20I'm%20interested%20in%20your%20design%20services!" target="_blank"
-     class="mt-6 inline-block px-6 py-3 bg-secondary text-white rounded-md shadow hover:bg-orange-600 transition">
-    Hire Sege
-  </a>
-</div>
-
+      <a href="https://wa.me/254742380183?text=Hi%20Sege%2C%20I'm%20interested%20in%20your%20design%20services!" target="_blank"
+         class="mt-6 inline-block px-6 py-3 bg-secondary text-white rounded-md shadow hover:bg-orange-600 transition">
+        Hire Sege
+      </a>
+    </div>
+  </div>
 
   <!-- About Skope Designs -->
   <div class="mt-20 bg-gradient-to-r from-cyan-50 to-white p-6 md:p-12 rounded-xl shadow-lg">
     <h3 class="text-3xl font-bold text-primary mb-6 text-center animate-fade-in">About Skope Designs</h3>
     <p class="text-gray-800 text-lg leading-relaxed text-center max-w-4xl mx-auto animate-fade-in-up">
       <strong>Skope Designs</strong> is a cutting-edge creative agency delivering <span class="text-secondary font-semibold">“Designs Beyond Boundaries.”</span>
-      We provide innovative, visually stunning, and functional designs for individuals, startups, and enterprises in Kenya and beyond.
-      Our core values are creativity, quality, and customer-centric service.
+      We provide innovative, visually stunning, and functional digital solutions for individuals, startups, and enterprises in Kenya and beyond. 
+      Our core values are creativity, quality, and client-focused service.
     </p>
 
     <!-- Mission & Vision -->
@@ -228,8 +227,7 @@
       <div class="bg-white p-6 rounded-md shadow-md animate-slide-in-left">
         <h4 class="text-2xl font-semibold text-secondary mb-2">Our Mission</h4>
         <p class="text-gray-700">
-          To empower brands and individuals through exceptional design and digital solutions that communicate value, drive engagement,
-          and leave lasting impressions.
+          To empower brands and individuals through exceptional design and digital solutions that communicate value, drive engagement, and leave lasting impressions.
         </p>
       </div>
       <div class="bg-white p-6 rounded-md shadow-md animate-slide-in-right">
@@ -239,63 +237,64 @@
         </p>
       </div>
     </div>
+
     <!-- Skills and Tools Section -->
-<div class="mt-20 text-center">
-  <h3 class="text-3xl md:text-4xl font-bold text-primary mb-6 animate-fade-in">Skills & Tools</h3>
-  <p class="text-gray-700 max-w-3xl mx-auto mb-10 animate-fade-in-up">
-    Sege Peter is a multi-disciplinary creative with a solid foundation in design and technology. His toolbox spans across top industry-standard tools and programming languages.
-  </p>
+    <div class="mt-20 text-center">
+      <h3 class="text-3xl md:text-4xl font-bold text-primary mb-6 animate-fade-in">Skills & Tools</h3>
+      <p class="text-gray-700 max-w-3xl mx-auto mb-10 animate-fade-in-up">
+        Sege Peter is a multi-disciplinary tech creative with a solid foundation in programming, web development, and design. His toolbox spans top industry-standard tools, frameworks, and languages.
+      </p>
 
-  <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-left max-w-5xl mx-auto">
-    <!-- Design Tools -->
-    <div class="bg-white p-5 rounded-lg shadow animate-slide-in-left">
-      <h4 class="text-xl font-semibold text-secondary mb-2">Design Tools</h4>
-      <ul class="list-disc list-inside text-gray-700 space-y-1">
-        <li>Adobe Photoshop</li>
-        <li>Adobe Illustrator</li>
-        <li>Canva Pro</li>
-        <li>Figma</li>
-        <li>CapCut & VN Editor</li>
-      </ul>
+      <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-left max-w-5xl mx-auto">
+        <!-- Design Tools -->
+        <div class="bg-white p-5 rounded-lg shadow animate-slide-in-left">
+          <h4 class="text-xl font-semibold text-secondary mb-2">Design Tools</h4>
+          <ul class="list-disc list-inside text-gray-700 space-y-1">
+            <li>Adobe Photoshop</li>
+            <li>Adobe Illustrator</li>
+            <li>Canva Pro</li>
+            <li>Figma</li>
+            <li>CapCut & VN Editor</li>
+          </ul>
+        </div>
+
+        <!-- Web Development -->
+        <div class="bg-white p-5 rounded-lg shadow animate-slide-in-right">
+          <h4 class="text-xl font-semibold text-secondary mb-2">Web Development</h4>
+          <ul class="list-disc list-inside text-gray-700 space-y-1">
+            <li>HTML5, CSS3, Tailwind CSS</li>
+            <li>JavaScript (ES6+)</li>
+            <li>PHP, MySQL, Laravel</li>
+            <li>React.js</li>
+            <li>Git & GitHub</li>
+          </ul>
+        </div>
+
+        <!-- Programming & Analytics -->
+        <div class="bg-white p-5 rounded-lg shadow animate-slide-in-left">
+          <h4 class="text-xl font-semibold text-secondary mb-2">Programming & Tech</h4>
+          <ul class="list-disc list-inside text-gray-700 space-y-1">
+            <li>Python</li>
+            <li>Java</li>
+            <li>SQL Scripting</li>
+            <li>Power BI</li>
+            <li>Google Analytics</li>
+          </ul>
+        </div>
+
+        <!-- Social & Productivity -->
+        <div class="bg-white p-5 rounded-lg shadow animate-slide-in-right">
+          <h4 class="text-xl font-semibold text-secondary mb-2">Other Tools</h4>
+          <ul class="list-disc list-inside text-gray-700 space-y-1">
+            <li>Meta Business Suite</li>
+            <li>Hootsuite & Planners</li>
+            <li>Notion & Trello</li>
+            <li>MS Office & Google Docs</li>
+            <li>SEO & Page Speed Optimization</li>
+          </ul>
+        </div>
+      </div>
     </div>
-
-    <!-- Web Development -->
-    <div class="bg-white p-5 rounded-lg shadow animate-slide-in-right">
-      <h4 class="text-xl font-semibold text-secondary mb-2">Web Development</h4>
-      <ul class="list-disc list-inside text-gray-700 space-y-1">
-        <li>HTML5, CSS3, Tailwind CSS</li>
-        <li>JavaScript (ES6+)</li>
-        <li>PHP, MySQL</li>
-        <li>Git & GitHub</li>
-      </ul>
-    </div>
-
-    <!-- Programming & Analytics -->
-    <div class="bg-white p-5 rounded-lg shadow animate-slide-in-left">
-      <h4 class="text-xl font-semibold text-secondary mb-2">Programming & Tech</h4>
-      <ul class="list-disc list-inside text-gray-700 space-y-1">
-        <li>Python</li>
-        <li>Java</li>
-        <li>SQL Scripting</li>
-        <li>Power BI</li>
-        <li>Google Analytics</li>
-      </ul>
-    </div>
-
-    <!-- Social & Productivity -->
-    <div class="bg-white p-5 rounded-lg shadow animate-slide-in-right">
-      <h4 class="text-xl font-semibold text-secondary mb-2">Other Tools</h4>
-      <ul class="list-disc list-inside text-gray-700 space-y-1">
-        <li>Meta Business Suite</li>
-        <li>Hootsuite & Planners</li>
-        <li>Notion & Trello</li>
-        <li>MS Office & Google Docs</li>
-        <li>SEO & Page Speed Optimization</li>
-      </ul>
-    </div>
-  </div>
-</div>
-
   </div>
 </section>
 
@@ -458,6 +457,7 @@
   </script>
 </body>
 </html>
+
 
 
 
