--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
       <div class="relative overflow-hidden rounded-2xl shadow-2xl animate-slide-in-left">
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="ceo-sege.png" alt="Sege Peter - Founder & CEO of Skope Designs" class="w-full h-96 object-cover" /></div>
+            <div class="swiper-slide"><img src="ceo sege.png" alt="Sege Peter - Founder & CEO of Skope Designs" class="w-full h-96 object-cover" /></div>
             <div class="swiper-slide"><img src="DSC_0237.jpg" alt="Sege Peter Speaking at an Event" class="w-full h-96 object-cover" /></div>
             <div class="swiper-slide"><img src="sege1.jpg" alt="Sege Peter - Creative Technologist" class="w-full h-96 object-cover" /></div>
             <div class="swiper-slide"><img src="sege2.jpg" alt="Sege Peter Presenting Design Work" class="w-full h-96 object-cover" /></div>
@@ -321,6 +321,12 @@
           <i class="fab fa-adobe text-3xl text-red-500 mb-2"></i>
           Adobe Illustrator
         </div>
+   <!-- Tailwind CSS Skill Card -->
+<div class="bg-gradient-to-br from-white to-gray-100 text-dark rounded-xl py-6 px-4 shadow-md hover:shadow-xl hover:-translate-y-1 transition-all duration-300 font-medium flex flex-col items-center justify-center">
+  <i class="fab fa-tailwind-css text-3xl text-blue-500 mb-2"></i>
+  Tailwind CSS
+</div>
+
         <!-- Added Adobe Photoshop -->
         <div class="bg-gradient-to-br from-white to-gray-100 text-dark rounded-xl py-6 px-4 shadow-md hover:shadow-xl hover:-translate-y-1 transition-all duration-300 font-medium flex flex-col items-center justify-center">
           <i class="fab fa-adobe text-3xl text-blue-500 mb-2"></i>
@@ -490,3 +496,4 @@
   </script>
 </body>
 </html>
+
